--- a/Notes/Base.lproj/Main.storyboard
+++ b/Notes/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,99 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Notes" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EgR-hf-6Ql" userLabel=" Next Question">
+                                <rect key="frame" x="138" y="171" width="99" height="30"/>
+                                <state key="normal" title="Next Question"/>
+                                <connections>
+                                    <action selector="showNextQuestion" destination="BYZ-38-t0r" eventType="touchUpInside" id="NBb-Kx-jlu"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Correct Answer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hI-Lf-cjp" userLabel="Answer">
+                                <rect key="frame" x="50" y="231" width="275" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tgM-Wd-oeM">
+                                <rect key="frame" x="138" y="312" width="99" height="30"/>
+                                <state key="normal" title="Show Answer"/>
+                                <connections>
+                                    <action selector="showAnswer" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ban-Kl-8QM"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LIK-ue-dps" userLabel="Question">
+                                <rect key="frame" x="50" y="101" width="275" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="3Th-d2-Tyi"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d8D-UQ-sjo" userLabel="Score">
+                                <rect key="frame" x="138" y="372" width="99" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="User Answer" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ci0-DM-ckl">
+                                <rect key="frame" x="50" y="252" width="275" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fw3-HZ-jcy" userLabel="Title">
+                                <rect key="frame" x="50" y="50" width="275" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="LIK-ue-dps" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="3Ye-6K-8W1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EgR-hf-6Ql" secondAttribute="trailing" constant="138" id="B5B-YJ-KKq"/>
+                            <constraint firstItem="fw3-HZ-jcy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="D6I-pr-eHF"/>
+                            <constraint firstItem="EgR-hf-6Ql" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="138" id="Hnu-C3-pDq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LIK-ue-dps" secondAttribute="trailing" constant="50" id="IWP-d3-wD3"/>
+                            <constraint firstItem="tgM-Wd-oeM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="138" id="MLw-0w-iO0"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tgM-Wd-oeM" secondAttribute="trailing" constant="138" id="MxC-gG-zeu"/>
+                            <constraint firstItem="0hI-Lf-cjp" firstAttribute="top" secondItem="EgR-hf-6Ql" secondAttribute="bottom" constant="30" id="Ndn-bk-Aft"/>
+                            <constraint firstItem="Ci0-DM-ckl" firstAttribute="top" secondItem="0hI-Lf-cjp" secondAttribute="bottom" id="SFi-Ex-I0v"/>
+                            <constraint firstItem="LIK-ue-dps" firstAttribute="top" secondItem="fw3-HZ-jcy" secondAttribute="bottom" constant="30" id="TPz-9B-J2O"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ci0-DM-ckl" secondAttribute="trailing" constant="50" id="UZs-ck-kuw"/>
+                            <constraint firstItem="EgR-hf-6Ql" firstAttribute="top" secondItem="LIK-ue-dps" secondAttribute="bottom" constant="20" id="UlR-kM-kl7"/>
+                            <constraint firstItem="Ci0-DM-ckl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="W1E-f9-aei"/>
+                            <constraint firstItem="d8D-UQ-sjo" firstAttribute="top" secondItem="tgM-Wd-oeM" secondAttribute="bottom" constant="30" id="Zkw-gE-YHC"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fw3-HZ-jcy" secondAttribute="trailing" constant="50" id="af0-gg-EuB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0hI-Lf-cjp" secondAttribute="trailing" constant="50" id="czw-y4-AeD"/>
+                            <constraint firstItem="Ci0-DM-ckl" firstAttribute="top" secondItem="0hI-Lf-cjp" secondAttribute="bottom" id="i2j-yh-1jT"/>
+                            <constraint firstItem="tgM-Wd-oeM" firstAttribute="top" secondItem="Ci0-DM-ckl" secondAttribute="bottom" constant="30" id="iee-ig-tNb"/>
+                            <constraint firstItem="fw3-HZ-jcy" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="kKr-5f-6WM"/>
+                            <constraint firstItem="d8D-UQ-sjo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="138" id="lwx-rk-Fx2"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="d8D-UQ-sjo" secondAttribute="trailing" constant="138" id="t3V-cn-wQs"/>
+                            <constraint firstItem="0hI-Lf-cjp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="wST-H1-ak4"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="answerLabel" destination="0hI-Lf-cjp" id="dKj-Jc-h3j"/>
+                        <outlet property="button1" destination="EgR-hf-6Ql" id="m6l-nl-r02"/>
+                        <outlet property="button2" destination="tgM-Wd-oeM" id="Vih-x6-p7t"/>
+                        <outlet property="questionLabel" destination="LIK-ue-dps" id="PFX-Lg-oG5"/>
+                        <outlet property="scoreLabel" destination="d8D-UQ-sjo" id="0LU-po-Uf0"/>
+                        <outlet property="textField" destination="Ci0-DM-ckl" id="vLZ-We-AtV"/>
+                        <outlet property="titleLabel" destination="fw3-HZ-jcy" id="Psh-7h-vjt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
